Refatorando player, campeonato e partidas